Rename aoe2maps → aoe2map

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -8,11 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'mapsapp/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'mapsapp/css/aoe2maps.css' %}">
+    <link rel="stylesheet" href="{% static 'mapsapp/css/aoe2map.css' %}">
     {% block additionalcss %}
     {% endblock %}
 
-    <title>aoe2maps{% block pagetitle %}{% endblock %}</title>
+    <title>aoe2map{% block pagetitle %}{% endblock %}</title>
     {% block style %}{% endblock %}
     {% block additionalheader %}{% endblock %}
 </head>
