Make page titles more verbose

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -12,7 +12,7 @@
     {% block additionalcss %}
     {% endblock %}
 
-    <title>aoe2map{% block pagetitle %}{% endblock %}</title>
+    <title>{% block pagetitle %}{% endblock %}aoe2map</title>
     {% block style %}{% endblock %}
     {% block additionalheader %}{% endblock %}
 </head>
