--- a/mapsapp/templates/mapsapp/collections.html
+++ b/mapsapp/templates/mapsapp/collections.html
@@ -1,7 +1,7 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
 
-{% block pagetitle %} – Map Collections{% endblock %}
+{% block pagetitle %}Map Collections – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">
         <img src="{% static 'mapsapp/images/maps.svg' %}" style="height:1.1em;"/> Map Collections
