--- a/mapsapp/templates/mapsapp/editcollection.html
+++ b/mapsapp/templates/mapsapp/editcollection.html
@@ -11,6 +11,8 @@
     </style>
 {% endblock %}
 
+{% block pagetitle %}Edit collection – {% endblock %}
+
 {% block subtitle %}
     <h4 class="text-center">{{ action }} Collection</h4>
 {% endblock %}
