--- a/mapsapp/templates/mapsapp/editmap.html
+++ b/mapsapp/templates/mapsapp/editmap.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'mapsapp/css/tagsinput.css' %}">
 {% endblock %}
 
-{% block pagetitle %} – Edit Map{% endblock %}
+{% block pagetitle %}Edit Map – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">Edit Map</h4>
 {% endblock %}
