--- a/mapsapp/templates/mapsapp/index.html
+++ b/mapsapp/templates/mapsapp/index.html
@@ -1,6 +1,7 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
 
+{% block pagetitle %}Index – {% endblock %}
 {% block subtitle %}
     <div class="text-center"><em>Welcome!
         aoe2map.net is a place to share your random map scripts (rms) for Age of Empires II.
