--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -1,6 +1,8 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
 
+{% block pagetitle %}Info – {% endblock %}
+
 {% block subtitle %}
     <div class="text-center"><h4>Info</h4></div>
 {% endblock %}
