--- a/mapsapp/templates/mapsapp/login.html
+++ b/mapsapp/templates/mapsapp/login.html
@@ -1,5 +1,5 @@
 {% extends "mapsapp/base.html" %}
-{% block pagetitle %} – Login{% endblock %}
+{% block pagetitle %}Login – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">Login</h4>
 {% endblock %}
