--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -26,6 +26,8 @@
     <meta name="twitter:card" content="summary_large_image"/>
 {% endblock %}
 
+{% block pagetitle %}{{ rms.name }} – {% endblock %}
+
 {% block subtitle %}
     <div class="offset-md-1 col-md-10 col-12 singlemap-area">
         <div class="row">
