--- a/mapsapp/templates/mapsapp/mappack.html
+++ b/mapsapp/templates/mapsapp/mappack.html
@@ -25,8 +25,11 @@
 
     </style>
 {% endblock %}
+
+{% block pagetitle %}Mappack creator – {% endblock %}
+
 {% block subtitle %}
-    <h4 class="text-center">Create a map pack</h4>
+    <h4 class="text-center">Create a mappack</h4>
 {% endblock %}
 
 {% block content %}
