--- a/mapsapp/templates/mapsapp/maps.html
+++ b/mapsapp/templates/mapsapp/maps.html
@@ -1,7 +1,7 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
 
-{% block pagetitle %} – Maps{% endblock %}
+{% block pagetitle %}Maps – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center"><img src="{% static 'mapsapp/images/map.svg' %}" style="height:1em;"/> Maps</h4>
 {% endblock %}
