--- a/mapsapp/templates/mapsapp/newmap.html
+++ b/mapsapp/templates/mapsapp/newmap.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'mapsapp/css/tagsinput.css' %}">
 {% endblock %}
 
-{% block pagetitle %} – New Map{% endblock %}
+{% block pagetitle %}New Map – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">New Map</h4>
 {% endblock %}
