--- a/mapsapp/templates/mapsapp/register.html
+++ b/mapsapp/templates/mapsapp/register.html
@@ -1,7 +1,7 @@
 {% extends "mapsapp/base.html" %}
 {% load widget_tweaks %}
 
-{% block pagetitle %} – Register{% endblock %}
+{% block pagetitle %}Register – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">Register</h4>
 {% endblock %}
