--- a/mapsapp/templates/mapsapp/mycollections.html
+++ b/mapsapp/templates/mapsapp/mycollections.html
@@ -1,6 +1,8 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
 
+{% block pagetitle %}My collections – {% endblock %}
+
 {% block subtitle %}
     <h4 class="text-center"><img src="{% static 'mapsapp/images/maps.svg' %}" style="height:1em;"/> My Collections</h4>
 {% endblock %}
