--- a/mapsapp/templates/mapsapp/search.html
+++ b/mapsapp/templates/mapsapp/search.html
@@ -1,5 +1,8 @@
 {% extends "mapsapp/base.html" %}
 {% load static %}
+
+{% block pagetitle %}Search – {% endblock %}
+
 {% block subtitle %}
     <h4 class="text-center">Search results for ›{{ term }}‹</h4>
 {% endblock %}
