--- a/mapsapp/templates/mapsapp/settings.html
+++ b/mapsapp/templates/mapsapp/settings.html
@@ -1,7 +1,7 @@
 {% extends "mapsapp/base.html" %}
 {% load widget_tweaks %}
 
-{% block pagetitle %} – Settings{% endblock %}
+{% block pagetitle %}Settings – {% endblock %}
 {% block subtitle %}
     <h4 class="text-center">Settings</h4>
 {% endblock %}
