--- a/mapsapp/templates/mapsapp/tags.html
+++ b/mapsapp/templates/mapsapp/tags.html
@@ -1,8 +1,12 @@
 {% extends "mapsapp/base.html" %}
+
+{% block pagetitle %}Tags – {% endblock %}
+
 {% block subtitle %}
     <h4 class="text-center">Maps tagged with ›{% for tag in tagset %}{{ tag }}{% if not forloop.last %},
     {% endif %}{% endfor %}‹</h4>
 {% endblock %}
+
 {% block content %}
     <div class="row alltags">
         <div class="col-md-8 offset-md-2">
