Add link to snippets page

--- a/mapsapp/templates/mapsapp/base.html
+++ b/mapsapp/templates/mapsapp/base.html
@@ -34,6 +34,9 @@
             <a class="nav-link" href="{% url 'mappack' %}" id="nav-link-mappack-creator">Mappack Creator</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="https://snippets.aoe2map.net" id="nav-link-snippets">Snippets</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="{% url 'info' %}" id="nav-link-info">Info</a>
         </li>
         {% if not request.user.is_authenticated %}
