fixup! Add markdown formatting to Collection descriptions
Remove linebreaks since they break some constructs

--- a/mapsapp/templates/mapsapp/collection.html
+++ b/mapsapp/templates/mapsapp/collection.html
@@ -8,7 +8,7 @@
     </h4>
     <hr>
     <div class="col-md-6 offset-md-3 col-12">
-        <div class="markdown-text">{{ collection.description|linebreaks }}</div>
+        <div class="markdown-text">{{ collection.description }}</div>
         <p class="text-center">
             <button class="btn btn-secondary" id="download">Download Collection</button>
 
