Add direct rms code display with syntax highlighting

--- a/mapsapp/static/mapsapp/css/aoe2map.css
+++ b/mapsapp/static/mapsapp/css/aoe2map.css
@@ -117,3 +117,13 @@ ul.mapslist li:before {
 .map-description.full {
     max-height: none;
 }
+
+.modal-xl {
+    max-width: 1140px;
+}
+
+.hljs-ln td.hljs-ln-numbers {
+    text-align: right;
+    padding-right: 1rem;
+    color: gray;
+}
