--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -17,7 +17,7 @@
 
                 <ul>
                     <li>Read this very informative page</li>
-                    <li>Browse and download maps (<code>.rms</code> files)</li>
+                    <li>Browse, view and download maps (<code>.rms</code> files)</li>
                     <li>Browse and download map collections</li>
                     <li>Search for maps or authors by name</li>
                     <li>Use the Mappack Creator to create mappacks (a mappack is a single <code>.rms</code> file that
