--- a/mapsapp/templates/mapsapp/map.html
+++ b/mapsapp/templates/mapsapp/map.html
@@ -226,6 +226,7 @@
     <script src="{% static 'mapsapp/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/markdown-it.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/markdown.js' %}"></script>
+    <script src="{% static 'mapsapp/js/jszip.min.js' %}"></script>
     <script src="{% static 'mapsapp/js/highlight.js' %}"></script>
     <script src="{% static 'mapsapp/js/highlight.js-rms.js' %}"></script>
     <script src="{% static 'mapsapp/js/highlightjs-line-numbers.min.js' %}"></script>
