Add latest maps row at top of index page

--- a/mapsapp/templates/mapsapp/snippets/maps_js_block.html
+++ b/mapsapp/templates/mapsapp/snippets/maps_js_block.html
@@ -1,4 +1,7 @@
 {% load static %}
-<script type="text/javascript">var API_URL = "{{API_URL}}"</script>
+<script type="text/javascript">
+    const API_URL = "{{API_URL}}";
+    const LATEST_MAPS_URL = "{{LATEST_MAPS_URL}}";
+</script>
 <script src="{% static 'mapsapp/js/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'mapsapp/js/aoe2map.js' %}"></script>
