--- a/mapsapp/templates/mapsapp/index.html
+++ b/mapsapp/templates/mapsapp/index.html
@@ -12,6 +12,11 @@
 
 
 {% block content %}
+    <h5>Latest additions & updates <small class="text-muted">The latest and greatest maps from the map making community</small></h5>
+    <div class="latestmaps row">
+        {% include 'mapsapp/snippets/loading_animation.html' %}
+    </div>
+    <h5>Randomly selected maps <small class="text-muted">They are called 'random maps' after all, right?</small></h5>
     <div class="maps row">
         {% include 'mapsapp/snippets/loading_animation.html' %}
     </div>
