Add "how to upload new map version" section to info page

--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -47,6 +47,36 @@
             </div>
         </div>
 
+
+        <div class="card" id="how-to-upload-new-version">
+            <div class="card-body">
+                <h5 class="card-title">I improved my map. How do I upload the new version?</h5>
+                <p>You can indeed upload a new version of your map. We even display a brief history / changelog for maps
+                    of which multiple versions have been uploaded.<br>
+                    Uploading a new version of a map is a straightforward process:</p>
+                <ol>
+                    <li>While logged in, click on the "Upload new version" button on the main page of the map you want
+                        to update. This is only available for your own maps.<br>
+                        Alternatively, you can click on the small dropdown arrow next to the map on your
+                        <a href="{% url 'mymaps' %}">My&nbsp;maps</a> page and select, you guessed it, "Upload new
+                        version".
+                    </li>
+                    <li>The regular "New Map" dialog appears, but some fields are already filled out (like "Name",
+                        "Authors" or "Description") – they contain the values from the old map for your convenience.
+                        Select the new <code>.rms</code> file
+                        <a href="https://github.com/HSZemi/aoe2map/issues/15">and&nbsp;new&nbsp;images</a>,
+                        fill in or edit the values in the remaining input fields ("Version" and
+                        "Changelog" might be especially interesting here) and click "Upload" – and you are all set!
+                    </li>
+                    <li>The new version is now available on the website.</li>
+                    <li>In all collections, your own and those of others, the old version got replaced with the new
+                        version you just uploaded.
+                    </li>
+                    <li>The old version displays a notice that a newer version is available.</li>
+                </ol>
+            </div>
+        </div>
+
         <div class="card" id="how-to-play">
             <div class="card-body">
                 <h5 class="card-title">How To Play Random Map Scripts</h5>
