--- a/mapsapp/templates/mapsapp/info.html
+++ b/mapsapp/templates/mapsapp/info.html
@@ -37,6 +37,8 @@
                     </li>
                     <li>Create map collections</li>
                     <li>Edit your map collections</li>
+                    <li>Express your affection towards a map by clicking the <span class="heart">❤</span> button</li>
+                    <li>Undo your expression of affection by clicking the <span class="heart">❤</span> button again</li>
                     <li>Log in and log out</li>
                     <li>Change your password</li>
                     <li>Add and remove an email address to/from your profile</li>
