Fix arrows on images for small screen sizes
ty Jabark

--- a/mapsapp/static/mapsapp/css/aoe2map.css
+++ b/mapsapp/static/mapsapp/css/aoe2map.css
@@ -13,6 +13,7 @@
 .mapscreenshot-container {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
 }
 
 .singlemap-area {
